Add lyon weather items

--- a/weather/Sources/Base.lproj/Main.storyboard
+++ b/weather/Sources/Base.lproj/Main.storyboard
@@ -568,6 +568,9 @@
                                         <state key="normal" title="Lyon">
                                             <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         </state>
+                                        <connections>
+                                            <action selector="didPressLyonButton:" destination="hMc-WA-xf5" eventType="touchUpInside" id="QJu-Jb-bLZ"/>
+                                        </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pDP-1d-BOD">
                                         <rect key="frame" x="0.0" y="84" width="240" height="35"/>
