--- a/weather/Sources/Base.lproj/Main.storyboard
+++ b/weather/Sources/Base.lproj/Main.storyboard
@@ -38,21 +38,13 @@
                                                     <rect key="frame" x="20" y="4" width="284" height="103"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Paris" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="C6F-31-vJn">
-                                                            <rect key="frame" x="0.0" y="0.0" width="150" height="103"/>
-                                                            <constraints>
-                                                                <constraint firstAttribute="width" constant="150" id="C5e-GJ-OCn"/>
-                                                                <constraint firstAttribute="height" constant="40" id="eFU-cK-E41"/>
-                                                            </constraints>
+                                                            <rect key="frame" x="0.0" y="0.0" width="107" height="103"/>
                                                             <fontDescription key="fontDescription" name="Kailasa" family="Kailasa" pointSize="24"/>
                                                             <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="15°C" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1Ae-Md-UIo">
-                                                            <rect key="frame" x="220" y="0.0" width="64" height="103"/>
-                                                            <constraints>
-                                                                <constraint firstAttribute="width" constant="150" id="NQj-ab-gpZ"/>
-                                                                <constraint firstAttribute="height" constant="40" id="r0f-Lt-wtK"/>
-                                                            </constraints>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="15°C" textAlignment="right" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1Ae-Md-UIo">
+                                                            <rect key="frame" x="177" y="0.0" width="107" height="103"/>
                                                             <fontDescription key="fontDescription" name="Kailasa" family="Kailasa" pointSize="27"/>
                                                             <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                             <nil key="highlightedColor"/>
