--- a/weather/Sources/Base.lproj/Main.storyboard
+++ b/weather/Sources/Base.lproj/Main.storyboard
@@ -27,35 +27,39 @@
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <color key="sectionIndexBackgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="CityTableViewCell" rowHeight="111" id="gF8-10-6oQ" customClass="CityTableViewCell" customModule="weather" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="320" height="111"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="CityTableViewCell" rowHeight="143" id="gF8-10-6oQ" customClass="CityTableViewCell" customModule="weather" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="320" height="143"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="gF8-10-6oQ" id="v9B-dl-q77">
-                                            <rect key="frame" x="0.0" y="0.0" width="320" height="111"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="320" height="143"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <stackView opaque="NO" contentMode="scaleToFill" spacing="70" translatesAutoresizingMaskIntoConstraints="NO" id="ybQ-ab-Pi6">
-                                                    <rect key="frame" x="20" y="4" width="253" height="103"/>
+                                                <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ybQ-ab-Pi6">
+                                                    <rect key="frame" x="20" y="20" width="253" height="103"/>
                                                     <subviews>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Paris" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="C6F-31-vJn">
-                                                            <rect key="frame" x="0.0" y="0.0" width="91.5" height="103"/>
-                                                            <fontDescription key="fontDescription" name="Kailasa" family="Kailasa" pointSize="24"/>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Berlin" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="C6F-31-vJn">
+                                                            <rect key="frame" x="0.0" y="0.0" width="180" height="103"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="width" constant="180" id="HNu-Bn-K2g"/>
+                                                            </constraints>
+                                                            <fontDescription key="fontDescription" name="Kailasa" family="Kailasa" pointSize="22"/>
                                                             <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="15°C" textAlignment="right" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1Ae-Md-UIo">
-                                                            <rect key="frame" x="161.5" y="0.0" width="91.5" height="103"/>
-                                                            <fontDescription key="fontDescription" name="Kailasa" family="Kailasa" pointSize="27"/>
+                                                            <rect key="frame" x="180" y="0.0" width="73" height="103"/>
+                                                            <fontDescription key="fontDescription" name="Kailasa" family="Kailasa" pointSize="23"/>
                                                             <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                     </subviews>
                                                     <constraints>
                                                         <constraint firstItem="C6F-31-vJn" firstAttribute="centerY" secondItem="1Ae-Md-UIo" secondAttribute="centerY" id="Pm9-IS-qB3"/>
+                                                        <constraint firstItem="1Ae-Md-UIo" firstAttribute="leading" secondItem="C6F-31-vJn" secondAttribute="trailing" id="hjH-xt-AaL"/>
                                                     </constraints>
                                                 </stackView>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="chevron.right" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="bOl-6e-gbr">
-                                                    <rect key="frame" x="281" y="47.5" width="20" height="16.5"/>
+                                                    <rect key="frame" x="281" y="63.5" width="20" height="16.5"/>
                                                     <color key="tintColor" red="0.97647058819999999" green="0.81172148359999996" blue="0.91914626430000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="20" id="43U-sx-hJc"/>
@@ -65,9 +69,9 @@
                                             </subviews>
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <constraints>
-                                                <constraint firstItem="ybQ-ab-Pi6" firstAttribute="top" secondItem="v9B-dl-q77" secondAttribute="top" constant="4" id="8Tr-Tm-lFg"/>
+                                                <constraint firstItem="ybQ-ab-Pi6" firstAttribute="top" secondItem="v9B-dl-q77" secondAttribute="top" constant="20" id="8Tr-Tm-lFg"/>
                                                 <constraint firstItem="bOl-6e-gbr" firstAttribute="leading" secondItem="1Ae-Md-UIo" secondAttribute="trailing" constant="8" id="CnQ-Tm-Oaj"/>
-                                                <constraint firstAttribute="bottom" secondItem="ybQ-ab-Pi6" secondAttribute="bottom" constant="4" id="GDQ-gf-CqA"/>
+                                                <constraint firstAttribute="bottom" secondItem="ybQ-ab-Pi6" secondAttribute="bottom" constant="20" id="GDQ-gf-CqA"/>
                                                 <constraint firstItem="bOl-6e-gbr" firstAttribute="centerY" secondItem="v9B-dl-q77" secondAttribute="centerY" id="OYC-fC-BAZ"/>
                                                 <constraint firstAttribute="trailingMargin" secondItem="bOl-6e-gbr" secondAttribute="trailing" constant="4" id="QkI-4e-7TK"/>
                                                 <constraint firstItem="ybQ-ab-Pi6" firstAttribute="leading" secondItem="v9B-dl-q77" secondAttribute="leading" constant="20" id="pIY-hs-c3a"/>
@@ -75,7 +79,7 @@
                                         </tableViewCellContentView>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <connections>
-                                            <outlet property="cityLabel" destination="1Ae-Md-UIo" id="YOF-J7-4tN"/>
+                                            <outlet property="cityLabel" destination="C6F-31-vJn" id="7fM-IO-0Sb"/>
                                             <outlet property="tempLabel" destination="1Ae-Md-UIo" id="Hy5-Kn-Sd4"/>
                                         </connections>
                                     </tableViewCell>
@@ -674,19 +678,6 @@
                                     <constraint firstItem="6jb-gY-AaH" firstAttribute="top" secondItem="158-eP-yUI" secondAttribute="top" id="gQB-Ij-3wB"/>
                                 </constraints>
                             </stackView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="M1r-uJ-bEO">
-                                <rect key="frame" x="40" y="400" width="240" height="40"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="40" id="6U4-YF-XOu"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" name="Kailasa" family="Kailasa" pointSize="17"/>
-                                <state key="normal" title="Add this city to the list">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                </state>
-                                <connections>
-                                    <action selector="didPressAddButton:" destination="hMc-WA-xf5" eventType="touchUpInside" id="THb-un-d7v"/>
-                                </connections>
-                            </button>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="Agj-Ma-6U9">
                                 <rect key="frame" x="30" y="206" width="260" height="64"/>
                                 <subviews>
@@ -710,6 +701,24 @@
                                     </textField>
                                 </subviews>
                             </stackView>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="A0d-0Q-1Rt">
+                                <rect key="frame" x="40" y="400" width="240" height="40"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="M1r-uJ-bEO">
+                                        <rect key="frame" x="0.0" y="0.0" width="240" height="40"/>
+                                        <fontDescription key="fontDescription" name="Kailasa" family="Kailasa" pointSize="17"/>
+                                        <state key="normal" title="Add this city to the list">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="didPressAddButton:" destination="hMc-WA-xf5" eventType="touchUpInside" id="THb-un-d7v"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="zrq-pp-HXT"/>
+                                </constraints>
+                            </stackView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
@@ -721,12 +730,12 @@
                             <constraint firstItem="Agj-Ma-6U9" firstAttribute="leading" secondItem="Qyq-tl-maK" secondAttribute="leading" constant="30" id="OjI-AN-ayI"/>
                             <constraint firstItem="gEI-ts-WE1" firstAttribute="top" secondItem="8N1-EO-Mpo" secondAttribute="top" id="PSl-cc-iMr"/>
                             <constraint firstItem="158-eP-yUI" firstAttribute="leading" secondItem="Qyq-tl-maK" secondAttribute="leading" constant="30" id="PgZ-dS-ppf"/>
-                            <constraint firstItem="Qyq-tl-maK" firstAttribute="trailing" secondItem="M1r-uJ-bEO" secondAttribute="trailing" constant="40" id="ZKb-Ib-Q6D"/>
+                            <constraint firstItem="Qyq-tl-maK" firstAttribute="bottom" secondItem="A0d-0Q-1Rt" secondAttribute="bottom" constant="40" id="Ryb-bw-GEs"/>
                             <constraint firstAttribute="trailing" secondItem="158-eP-yUI" secondAttribute="trailing" constant="30" id="bIh-6I-s5G"/>
-                            <constraint firstItem="Qyq-tl-maK" firstAttribute="bottom" secondItem="M1r-uJ-bEO" secondAttribute="bottom" constant="40" id="cxa-1j-BAf"/>
                             <constraint firstAttribute="trailing" secondItem="Agj-Ma-6U9" secondAttribute="trailing" constant="30" id="dKc-Zp-zOo"/>
                             <constraint firstItem="Pdi-ib-kVh" firstAttribute="centerX" secondItem="gEI-ts-WE1" secondAttribute="centerX" id="eCH-fH-pdy"/>
-                            <constraint firstItem="M1r-uJ-bEO" firstAttribute="leading" secondItem="Qyq-tl-maK" secondAttribute="leading" constant="40" id="rr3-Ef-LDN"/>
+                            <constraint firstItem="A0d-0Q-1Rt" firstAttribute="leading" secondItem="Qyq-tl-maK" secondAttribute="leading" constant="40" id="gwb-1U-45h"/>
+                            <constraint firstItem="Qyq-tl-maK" firstAttribute="trailing" secondItem="A0d-0Q-1Rt" secondAttribute="trailing" constant="40" id="h3D-2C-mee"/>
                             <constraint firstItem="Pdi-ib-kVh" firstAttribute="top" secondItem="Qyq-tl-maK" secondAttribute="top" constant="20" id="stu-MX-K7K"/>
                             <constraint firstItem="Qyq-tl-maK" firstAttribute="trailing" secondItem="gEI-ts-WE1" secondAttribute="trailing" id="x0P-2B-Gl8"/>
                         </constraints>
